src/main/java/com/example/sos/employee/error/InvalidUploadFormatError.java
package com.example.sos.employee.error;

public class InvalidUploadFormatError extends RuntimeException {}
